fix: accidentally removed body scroll, *actually* fix layout jump

--- a/layouts/header/style.css
+++ b/layouts/header/style.css
@@ -87,10 +87,11 @@ input, textarea {
     height: 46px;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     z-index: 100;
     font-size: 13px;
     color: var(--darker-gray);
+    padding-right: calc(100vw - 100%);
 }
 
 #navbar-line {
